kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/backend-standards-default: "true"
        io.kompose.service: mongodb
    spec:
      containers:
        - env:
            - name: MONGO_DATA_DIR
              value: /data/db
            - name: MONGO_LOG_DIR
              value: /dev/null
          image: mongo:4.2
          name: mongodb
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-volume
      restartPolicy: Always
      volumes:
        - name: mongodb-volume
          persistentVolumeClaim:
            claimName: mongodb-volume
status: {}
