kubernetes/nodejs-kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nodejs-kubernetes
  name: nodejs-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nodejs-kubernetes
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/backend-standards-default: "true"
        io.kompose.service: nodejs-kubernetes
    spec:
      containers:
        - env:
            - name: DB_URL
              value: mongodb://mongodb:27017/standard_server
            - name: PORT
              value: "80"
            - name: SWAGGER
              value: "true"
          image: gcr.io/backend-standard-378715/node-kubernetes:v0.0.6
          name: nodejs-kubernetes
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
