kubernetes/nodejs-kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nodejs-kubernetes
  name: nodejs-kubernetes
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: nodejs-kubernetes
status:
  loadBalancer: {}
